test/CheckError/StaticRef/InvalidStaticRefTargetTypeCast.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() { }

class TestClass2() { }

void function0(staticref<TestClass> typename_t typeValue) {
	// CHECK: .loci:10:12: error: Can't implicitly cast value of type 'ref<lval<staticref<TestClass>(typename_t)>(value_lval_t<staticref<TestClass>(typename_t)>)>(lval<staticref<TestClass>(typename_t)>(value_lval_t<staticref<TestClass>(typename_t)>)&)' to type 'staticref<TestClass2>(typename_t)'.
	function1(typeValue);
}

void function1(staticref<TestClass2> typename_t typeValue) { }

export int main(unused int argc, unused ubyte ** argv) {
	function0(TestClass);
	return 0;
}

// CHECK: 1 error generated.
